--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,14 @@
-pyrogram==2.0.106
-aiogram==3.4.1
-python-dotenv==1.0.1
-# tgcrypto is optional; install only if supported
-tgcrypto>=1.2.0,<1.3.0; platform_machine != "unknown"
-
 # Telegram Framework
 pyrogram==2.0.106
-tgcrypto==1.2.5
+aiogram==3.4.1
+tgcrypto>=1.2.0,<1.3.0
 
-# Database (optional, remove if not used)
+# Database (optional)
 sqlalchemy==1.4.49
 aiosqlite==0.20.0
 
-# Pydantic (force v1 to avoid Rust)
-pydantic==1.10.14
+# Pydantic v2 (compatible with aiogram 3.4.1)
+pydantic>=2.4,<2.6
 
 # Utils
 requests==2.31.0
@@ -21,3 +16,4 @@ python-dotenv==1.0.1
 
 # Async
 httpx==0.27.0
+
