--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,22 @@
-# Telegram Framework
+# Telegram Clients
 pyrogram==2.0.106
 aiogram==3.4.1
-tgcrypto>=1.2.0,<1.3.0
+
+# Crypto optimization (optional, Render auto-skips if unsupported)
+tgcrypto>=1.2.0,<1.3.0; platform_machine != "unknown"
 
 # Database (optional)
 sqlalchemy==1.4.49
 aiosqlite==0.20.0
 
-# Pydantic v2 (compatible with aiogram 3.4.1)
-pydantic>=2.4,<2.6
-
 # Utils
 requests==2.31.0
 python-dotenv==1.0.1
-
-# Async
 httpx==0.27.0
 
+# Aiogram needs pydantic v2
+pydantic>=2.4,<2.6
+
+pip==25.1.1
+setuptools>=65.0.0
+wheel
